pdelabdir = $(includedir)/dune/pdelab
SUBDIRS =					\
	adaptivity				\
	backend					\
	common					\
	finiteelement				\
	finiteelementmap			\
	function				\
	gridfunctionspace			\
	gridoperatorspace			\
	linearsolver				\
        instationary                            \
	localoperator				\
	multistep				\
	newton					\
        stationary                              \
	test

include $(top_srcdir)/am/global-rules
