commondir = $(includedir)/dune/pdelab/gridoperatorspace
common_HEADERS =				\
	gridoperatorspace.hh			\
	gridoperatorspaceutilities.hh		\
	instationarygridoperatorspace.hh	\
	localmatrix.hh				\
        new_gridoperatorspace.hh                \
        new_instationarygridoperatorspace.hh    \
        old_gridoperatorspace.hh                \
        old_instationarygridoperatorspace.hh    \
	printmatrix.hh

include $(top_srcdir)/am/global-rules
